# hypernet-agentless

./: .gitignore  .gitreview  .project  .pydevproject  AUTHORS  ChangeLog  PKG-INFO  README.md  clean_hs.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: override-defaults  plugin.sh  settings
doc/source/: create_null_fake_provider.sh  create_service.sh  hypernet_agentless.rst  windows_startup.puml
doc/source/scripts/: centos-hyperswitch-install.sh  connect.ps1  ubuntu-hyperswitch-install.sh
etc/agent/: hosts.tmpl
etc/agent/hypernet/: hyperswitch.conf.tmpl
etc/agent/hyperswitch/: hyperswitch.conf  hyperswitch.conf.tmpl  rootwrap.conf
etc/agent/init/: hyperswitch-cleanup.conf  hyperswitch-config.conf  hyperswitch.conf
etc/agent/neutron/: dhcp_agent.ini.tmpl  dvr_compute_agent.ini.tmpl  metadata_agent.ini.tmpl  neutron.conf.tmpl
etc/agent/neutron/plugins/ml2/: ml2_conf.ini.tmpl  ml2_conf.tmpl  openvswitch_agent.ini.tmpl
etc/agent/neutron/plugins/openvswitch/: ovs_neutron_plugin.ini.tmpl
etc/agent/openvpn/: ca.crt  client.crt  client.key  dh2048.pem  server.crt  server.key
etc/agent/systemd/: hyperswitch-cleanup.service  hyperswitch-config.service  hyperswitch.service
etc/powerdns/: pdns.conf
etc/server/hypernet/: api-paste.ini  hypernet-test.conf  hypernet.conf  policy.json
etc/server/init/: hypernet.conf
etc/server/neutron/: hyperswitch_plugin.ini
etc/server/systemd/: hypernet-api.service
hypernet_agentless/: __init__.py  _i18n.py  hs_constants.py  version.py
hypernet_agentless/agent/hyperswitch/: config.py  hyperswitch.py  hyperswitch_agent.py  hyperswitch_utils.py  l2tp_tun.py  ovpn_tun.py  vif_driver.py  vif_hyperswitch_driver.py  vpn_driver.py
hypernet_agentless/agent/hyperswitch/cleanup/: cleanup.py
hypernet_agentless/agent/hyperswitch/config/: config.py
hypernet_agentless/agent/hyperswitch/main/: agent.py  cleanup.py  config.py
hypernet_agentless/client/: _providerport.py  client.py  shell.py
hypernet_agentless/client/common/: clientmanager.py  command.py  constants.py  exceptions.py  extension.py  serializer.py  utils.py
hypernet_agentless/client/hypernet/: client.py
hypernet_agentless/client/hypernet/v1_0/: __init__.py  hyperswitch.py  providerport.py  providersubnetpool.py
hypernet_agentless/client/v1_0/: client.py
hypernet_agentless/client_ext/: _agentlessport.py  _hyperswitch.py
hypernet_agentless/common/: exceptions.py  hs_constants.py  hs_utils.py
hypernet_agentless/db/hyperswitch/: hyperswitch_db.py
hypernet_agentless/db/migration/: alembic.ini  cli.py
hypernet_agentless/db/migration/alembic_migrations/: env.py
hypernet_agentless/db/migration/alembic_migrations/versions/: 490c90d35219_agentlessport.py  490c90d35219_providerport.py  c03129fac19_hyperswitch.py
hypernet_agentless/extensions/: hyperswitch.py
hypernet_agentless/server/: config.py  context.py  manager.py  rpc.py
hypernet_agentless/server/api/: api_common.py  auth.py  extensions.py  policy.py  service.py  versions.py  wsgi.py
hypernet_agentless/server/api/v1/: attributes.py  base.py  resource_helper.py  router.py
hypernet_agentless/server/db/: api.py  common_db_mixin.py  model_base.py
hypernet_agentless/server/db/hyperswitch/: dns_db.py  hyperswitch_db.py
hypernet_agentless/server/db/migration/: cli.py
hypernet_agentless/server/db/migration/alembic_migrations/: env.py
hypernet_agentless/server/db/migration/alembic_migrations/versions/: 490c90d35219_providerport.py  HEAD  c03129fac19_hyperswitch.py  (+3 more)
hypernet_agentless/server/extensions/: hyperswitch.py
hypernet_agentless/server/main/: hypernet_api.py
hypernet_agentless/server/services/: os_client.py  service_base.py
hypernet_agentless/server/services/hyperswitch/: hyper_switch_api.py  hyperswitch_plugin.py  manager_ratio.py  provider_api.py
hypernet_agentless/server/services/hyperswitch/providers/: aws_impl.py  fs_impl.py  null_impl.py
hypernet_agentless/services/hyperswitch/: config.py  hyper_switch_api.py  hyperswitch_plugin.py  provider_api.py
hypernet_agentless/services/hyperswitch/providers/: aws_impl.py  fs_impl.py  null_impl.py
hypernet_agentless/test/services/hyperswitch/providers/: provider_impl.py  test_fs_impl.py
