[metadata]
name = hypernet-agentless
summary = OpenStack Neutron integration for agentless hypernet
description-file =
    README.md
author = Huawei
author-email = lionel.zerbib@huawei.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    hypernet_agentless

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hyperswitch = hypernet_agentless.agent.hyperswitch.hyperswitch_agent:main
    hyperswitch-cleanup = hypernet_agentless.agent.hyperswitch.cleanup.cleanup:main
    hyperswitch-config = hypernet_agentless.agent.hyperswitch.config.config:main
    hyperswitch-rootwrap = oslo_rootwrap.cmd:main
    hyperswitch-rootwrap-daemon = oslo_rootwrap.cmd:daemon
    hypernet-agentless-db-manage = hypernet_agentless.db.migration.cli:main
neutronclient.extension =
    hyperswitch = hypernet_agentless.client_ext._hyperswitch
    agentlessport = hypernet_agentless.client_ext._agentlessport

[pbr]
warnerrors = true
