[metadata]
name = hypernet-agentless
summary = OpenStack Neutron integration for agentless hypernet
description-file =
    README.md
author = Huawei
author-email = lionel.zerbib@huawei.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    hypernet_agentless

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hyperswitch = hypernet_agentless.agent.hyperswitch.main.agent:main
    hyperswitch-cleanup = hypernet_agentless.agent.hyperswitch.main.cleanup:main
    hyperswitch-config = hypernet_agentless.agent.hyperswitch.main.config:main
    hyperswitch-rootwrap = oslo_rootwrap.cmd:main
    hyperswitch-rootwrap-daemon = oslo_rootwrap.cmd:daemon
    hyperswitch-db-manage = hypernet_agentless.db.migration.cli:main
neutronclient.extension =
    hyperswitch = hypernet_agentless.client_ext._hyperswitch
    providerport = hypernet_agentless.client_ext._providerport

[pbr]
warnerrors = true
