[metadata]
name = hypernet-agentless
summary = OpenStack Hypernet integration for agentless
description-file =
    README.md
author = Huawei
author-email = lionel.zerbib@huawei.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    hypernet_agentless

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hypernet = hypernet_agentless.client.shell:main
    hypernet-api = hypernet_agentless.server.main.hypernet_api:main
    hypernet-db-manage = hypernet_agentless.server.db.migration.cli:main
    hyperswitch = hypernet_agentless.agent.hyperswitch.main.agent:main
    hyperswitch-cleanup = hypernet_agentless.agent.hyperswitch.main.cleanup:main
    hyperswitch-config = hypernet_agentless.agent.hyperswitch.main.config:main
    hyperswitch-rootwrap = oslo_rootwrap.cmd:main
    hyperswitch-rootwrap-daemon = oslo_rootwrap.cmd:daemon
hypernet.service_plugins =
    hyperswitch = hypernet_agentless.server.services.hyperswitch.hyperswitch_plugin:HyperswitchPlugin

[pbr]
warnerrors = true
